Fixing some errors

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,4 +24,6 @@
       <strong>Username:</strong> {{ user.username }} <br>
     {% endif %}
   {% endfor %}
+  <hr>
+  <p><strong>Current Version:</strong> Alpha v2</p>
 {% endblock %}
