--- a/app/templates/logs.html
+++ b/app/templates/logs.html
@@ -4,17 +4,27 @@
     <h1>Logs</h1> <br>
     <p>
         Update log (note, green is easily implementable, blue will take more time, and red is for critical fixes):
-    </p>
+    </p> <br>
+    <p>The followings features have been included in Alpha v2</p>
     <ul>
         <li>Login interface fixed</li>
         <li>Error handling internally</li>
         <li>Bot set up to receive errors</li>
-        <li><span style='color:rgb(235, 5, 5);'>Add image rating system</span></li>
-        <li><span style='color:rgb(235, 5, 5);'>Fix data on database</span></li>
+        <li>Ratings are displayed</li>
+        <li>Users can now upload images (buggy)</li>
+        <li>Admin privileges</li>
+        <li>Bot testing suite</li>
+    </ul> <br>
+    <p>To-Do: </p>
+    <ul>
+        <li><span style='color:rgb(235, 5, 5);'>Fix images not displaying</span></li>
+        <li><span style='color:rgb(235, 5, 5);'>Combine Rater+Uploader</span></li>
         <li><span style='color:rgb(0, 134, 22);'>Update home page</span></li>
         <li><span style='color:rgb(0, 134, 22);'>Clean up profiles</span></li>
-        <li><span style='color:rgb(9, 0, 134);'>Display ratings</span></li>
-        <li><span style='color:rgb(0, 134, 22);'>Request notes</span></li>
+        <li><span style='color:rgb(9, 0, 134);'>Show most recent ratings per user</span></li>
+        <li><span style='color:rgb(9, 0, 134);'>Show log of rating changes and when they occurred</span></li>
+        <li><span style='color:rgb(0, 134, 22);'>Request rating review by other users</span></li>
+        <li><span style='color:rgb(9, 0, 134);'>Image rating logsitics</span></li>
     </ul>
     <p>Update pending below: </p>
     <img  src="{{ url_for('static', filename='cat.jpg') }}" alt='Image of Cat'>
